# PrismTrace

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md
.opencode/: README.md
crates/prismtrace-host/: Cargo.toml
crates/prismtrace-host/assets/: console-base.css  console-theme-dark.css  console-theme-light.css  console-utilities.css  console.css  console.html  console.js
crates/prismtrace-host/assets/i18n/: en-US.json  zh-CN.json
crates/prismtrace-host/probe/: bootstrap.js  bootstrap.test.js
crates/prismtrace-host/src/: analysis.rs  attach.rs  capability_projection.rs  claude_observer.rs  codex_observer.rs  console.rs  discovery.rs  ingest.rs  ipc.rs  lib.rs  lifecycle.rs  main.rs  observability_read_model.rs  observer.rs  opencode_observer.rs  probe_health.rs  readiness.rs  request_capture.rs  response_capture.rs  runtime.rs  tool_visibility.rs
crates/prismtrace-host/src/console/: api.rs  mod.rs  model.rs  observer.rs  page.rs  payload.rs  server.rs  tests.rs
crates/prismtrace-host/src/index/: mod.rs  read_store.rs  write_store.rs
crates/prismtrace-host/src/sources/: mod.rs
crates/prismtrace-host/tests/: node_cli_attach.rs
docs/: 2026-04-17-ai-observability-v1-design.md  2026-04-17-ai-observability-v1-design.zh-CN.md  2026-04-18-product-iteration-roadmap.zh-CN.md  2026-04-18-workspace-skeleton-implementation-plan.md  surfaces.yaml  产品方案.md  产品迭代路线图.md  总体设计与V1方案.md  技术方案.md  技术架构改进方案 TODO.md
openspec/: config.yaml
scripts/: ci-local.sh  install-prismtrace.sh  package-release.sh  test-release-kit.sh
(+158 files in other folders)
