[package]
name = "prismtrace-host"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
prismtrace-core = { path = "../prismtrace-core" }
prismtrace-storage = { path = "../prismtrace-storage" }
serde_json = "1"
libc = "0.2"
tungstenite = "0.24"
ureq = "2"

[lib]
path = "src/lib.rs"

[[bin]]
name = "prismtrace-host"
path = "src/main.rs"
