[package]
name = "prismtrace-host"
edition.workspace = true
license.workspace = true
version.workspace = true
default-run = "prismtrace-host"

[dependencies]
prismtrace-analysis = { path = "../prismtrace-analysis" }
prismtrace-api = { path = "../prismtrace-api" }
prismtrace-core = { path = "../prismtrace-core" }
prismtrace-index = { path = "../prismtrace-index" }
prismtrace-sources = { path = "../prismtrace-sources" }
prismtrace-storage = { path = "../prismtrace-storage" }
serde_json = "1"
tungstenite = "0.24"
ureq = "2"

[lib]
path = "src/lib.rs"

[[bin]]
name = "prismtrace-host"
path = "src/main.rs"

[[bin]]
name = "prismtrace"
path = "src/bin/prismtrace.rs"
